@@ -66,6 +66,11 @@ SCG_DIRECTION:
     DEFAULT:
       DEFAULT: c("default", "right", "left")
 
+LAPLACIAN_DIR:
+    INCONV: %I% <- switch(igraph.match.arg(%I%), "row"=0, "col"=1)
+    DEFAULT: 
+      ROW: c("row", "col")
+
 CONNECTEDNESS:
     INCONV: %I% <- switch(igraph.match.arg(%I%), "weak"=1, "strong"=2)
     DEFAULT:
