@@ -170,6 +170,9 @@ typedef enum { IGRAPH_SCG_DIR_DEFAULT=0,
                IGRAPH_SCG_DIR_RIGHT, 
                IGRAPH_SCG_DIR_LEFT } igraph_scg_direction_t;
 
+typedef enum { IGRAPH_LAPLACIAN_ROW=0,
+	       IGRAPH_LAPLACIAN_COL } igraph_laplacian_direction_t;
+
 typedef igraph_real_t  igraph_scalar_function_t(const igraph_vector_t *var, 
 						const igraph_vector_t *par,
 						void* extra);
@@ -938,10 +941,12 @@ int igraph_is_bipartite(const igraph_t *graph,
 
 int igraph_laplacian(const igraph_t *graph, igraph_matrix_t *res,
 		     igraph_bool_t normalized, 
+		     igraph_laplacian_direction_t dir,
 		     const igraph_vector_t *weights);
 
 int igraph_laplacian_graph(const igraph_t *graph, igraph_t *res,
 			   igraph_bool_t normalized, 
+			   igraph_laplacian_direction_t dir,
 			   const igraph_vector_t *weights, 
 			   igraph_vector_t *out_weights);
 
